Fix x-overflow

--- a/triangles.css
+++ b/triangles.css
@@ -25,7 +25,6 @@
     --small-triangle-side: calc(var(--max-side) * 0.5 - var(--small-margin) * 0.86 * 2);
 
     --wrapper-width: 1300px;
-    --body-width: 100%;
     --trapezoid-big-width: calc(var(--max-side) * 0.86 + var(--big-margin) * 0.5);
     --triangle-left-big-margin: calc(var(--big-margin) * 0.5);
     --triangle-right-big-margin: var(--big-margin);
@@ -36,8 +35,7 @@
     :root {
         --max-side: calc((100vw - 4.15 * var(--big-margin)) * 1.15 / 3);
 
-        --wrapper-width: 100%;
-        --body-width: 110%;
+        --wrapper-width: 110%;
     }
 }
 
@@ -65,7 +63,7 @@ html, body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    width: var(--body-width);
+    width: 100%;
 }
 
 div#wrapper {
